--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
 @import 'bootstrap/dist/css/bootstrap.css';
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Handlee', cursive;
 }
 
 a {
@@ -24,11 +24,30 @@ body {
   /* color: #f6f4d2; */
 }
 
+h1 {
+  font-size: xxx-large;
+  font-weight: bold;
+}
+
+h2 {
+  color: #f8f9fa;
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: xx-large;
+}
 .cards-container {
   display: flex;
   flex-flow: row wrap;
 }
 
 .individual-cards {
+  font-size: large;
   margin: 5px;
+}
+
+form {
+  font-size: large;
 }
