Clear all dinners button is now on the right

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,13 @@ h2 {
 h3 {
   font-size: xx-large;
 }
+
+.to-the-right {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 5px;
+}
+
 .cards-container {
   display: flex;
   flex-flow: row wrap;
