Added more css to the day of the week's name and added css to the change dinner and clear dinner buttons on the dinner card

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,8 +58,22 @@ h3 {
   max-width: 100%;
 }
 
+.name-of-day {
+  display: flex;
+  justify-content: center;
+  font-size: larger;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 .dinner {
   padding: 0px 12px 10px 0px;
+}
+
+.edit-delete-footer {
+  display: flex;
+  justify-content: center;
+  gap: 10px
 }
 
 form {
