View Details link is now centered and underlined

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,6 +76,13 @@ h3 {
   gap: 10px
 }
 
+/* RECIPE CARDS */
+.underline-link {
+  display: flex;
+  justify-content: center;
+  text-decoration: underline;
+}
+
 form {
   font-size: large;
 }
