--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,8 +19,10 @@ a {
 
 body {
   background-color: #f19c79;
-  background-image: url(../image/pngegg.png);
+  background-image: url(../image/pngegg-mobile.png);
   background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
   color: #a44a3f;
 }
 
