Added white space to styling to that the ingredients and directions are easy to read

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -124,6 +124,7 @@ h3 {
 .box-around-input {
   border: #a44a3f solid 1px;
   padding: 5px 15px;
+  white-space: pre;
 }
 
 .single-view-edit-and-delete-buttons {
