Had to updated white-space on ingredient and direction boxes as the content was overflowing with just pre, but change white-space to pre-line and it works

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -148,7 +148,7 @@ h3 {
 .box-around-input {
   border: #a44a3f solid 1px;
   padding: 5px 15px;
-  white-space: pre;
+  white-space: pre-line;
 }
 
 .ingredients {
