--- a/styles/globals.css
+++ b/styles/globals.css
@@ -172,6 +172,13 @@ label {
   font-weight: bold;
 }
 
+.form-btn {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: 20px 0 20px 0;
+}
+
 /* RECIPE FORM */
 .note {
   color: #f8f9fa;
