When restaurant radio btn is clicked, placeholder text changes to 'e.g. Olive Garden' and if someone's home is clicked, placeholder text changes to 'e.g. Lucy's house'. Working on getting the div with input field to be hidden until one of the radio btns is clicked

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -188,3 +188,12 @@ label {
 .yes-option {
   margin-left: 10px;
 }
+
+/* EAT OUT FORM */
+.hide-div-on-eat-out-form {
+  display: block;
+}
+
+.show-div-on-eat-out-form {
+  display: block;
+}
