Added 'Add an Eat Out Option' button on mealOptions page, so users can navigate to EatOutForm without having to go back to the sidebar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -114,6 +114,7 @@ h3 {
 /* ADD A RECIPE BUTTON ON RECIPE PAGE */
 .add-recipe-btn {
   font-size: larger;
+  margin: 0 3px;
 }
 
 /* RECIPE CARDS */
