When deploying Plated, Netlify stripped a lot of the css. Add important to everything

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,201 +3,192 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
+  padding: 0 !important;
+  margin: 0 !important;
   font-family: 'Handlee', cursive !important;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: inherit !important;
+  text-decoration: none !important;
 }
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 
 body {
   background-color: #f19c79 !important;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  background-attachment: fixed !important;
   color: #a44a3f !important;
 }
 
 h1 {
-  font-size: xxx-large;
-  font-weight: bold;
+  font-size: xxx-large !important;
+  font-weight: bold !important;
 }
 
 h2 {
-  display: flex;
-  justify-content: center;
+  display: flex !important;
+  justify-content: center !important;
   color: #f8f9fa !important;
-  font-size: xx-large;
-  font-weight: bold;
+  font-size: xx-large !important;
+  font-weight: bold !important;
 }
 
 h3 {
-  font-size: xx-large;
+  font-size: xx-large !important;
 }
 
 /* SIGN IN PAGE */
 .sign-in-container {
-  position: relative;
-  display: flex;
-  justify-content: center;
+  position: relative !important;
+  display: flex !important;
+  justify-content: center !important;
 }
 
 .sign-in-container div {
-  position: absolute;
-  width: 22%;
-  top: 256px;
-  text-align: center;
+  position: absolute !important;
+  width: 22% !important;
+  top: 256px !important;
+  text-align: center !important;
 }
 
 .welcome-header {
-  display: flex;
-  justify-content: center;
+  display: flex !important;
+  justify-content: center !important;
 }
 
 /* CLEAR THE WEEK BUTTON */
 .to-the-right {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 5px;
+  display: flex !important;
+  justify-content: center !important;
+  margin-bottom: 5px !important;
 }
 
 .clear-all-btn {
-  font-size: x-large;
+  font-size: x-large !important;
 }
 
 /* DAY/DINNER/RECIPE/EAT OUT CARDS */
 .cards-container {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+  display: flex !important;
+  flex-flow: row wrap !important;
+  justify-content: center !important;
 }
 
 .individual-cards {
-  font-size: large;
-  margin: 5px;
-  max-width: 100%;
+  font-size: large !important;
+  margin: 5px !important;
+  max-width: 100% !important;
 }
 
 /* DAY/DINNER CARDS */
 .name-of-day {
-  display: flex;
-  justify-content: center;
-  font-size: larger;
-  font-weight: bold;
-  text-decoration: underline;
+  display: flex !important;
+  justify-content: center !important;
+  font-size: larger !important;
+  font-weight: bold !important;
+  text-decoration: underline !important;
 }
 
 .dinner {
-  padding: 0px 12px 10px 0px;
+  padding: 0px 12px 10px 0px !important;
 }
 
 .add-btn {
-  display: flex;
-  justify-content: center;
-  padding: 82px 0px 107px 0px ;
+  display: flex !important;
+  justify-content: center !important;
+  padding: 82px 0px 107px 0px !important;
 }
 
 .edit-delete-footer {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
+  display: flex !important;
+  justify-content: center !important;
+  gap: 10px !important;
 }
 
 /* ADD A RECIPE BUTTON ON RECIPE PAGE */
 .add-recipe-btn {
-  font-size: larger;
-  margin: 0 4px;
+  font-size: larger !important;
+  margin: 0 4px !important;
 }
 
 /* RECIPE CARDS */
 .recipe-title {
-  font-size: x-large;
-  font-weight: bold;
+  font-size: x-large !important;
+  font-weight: bold !important;
 }
 
 .underline-link {
-  display: flex;
-  justify-content: center;
-  text-decoration: underline;
+  display: flex !important;
+  justify-content: center !important;
+  text-decoration: underline !important;
 }
 
 /* EAT OUT CARDS */
 .eat-out-card {
-  margin: 30px 0 10px 0;
+  margin: 30px 0 10px 0 !important;
 }
 /* SINGLE VIEW OF RECIPE */
 .single-recipe-view {
-  margin: 30px 0px;
+  margin: 30px 0px !important;
 }
 
 .single-recipe-title {
-  font-size: xx-large;
-  font-weight: bold;
-  margin-top: 10px;
-  text-align: center;
-  text-decoration: underline;
+  font-size: xx-large !important;
+  font-weight: bold !important;
+  margin-top: 10px !important;
+  text-align: center !important;
+  text-decoration: underline !important;
 }
 
 .recipe-details {
-  font-size: larger;
+  font-size: larger !important;
 }
 
 .box-around-input {
   border: #a44a3f solid 1px !important;
-  padding: 5px 15px;
-  white-space: pre-line;
+  padding: 5px 15px !important;
+  white-space: pre-line !important;
 }
 
 .ingredients {
-  column-count: 3;
-  text-align: center;
+  column-count: 3 !important;
+  text-align: center !important;
 }
 
 .single-view-edit-and-delete-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 30px;
+  display: flex !important;
+  justify-content: center !important;
+  gap: 10px !important;
+  margin-top: 30px !important;
 }
 
 /* DINNER AND RECIPE FORMS */
 form {
-  font-size: large;
+  font-size: large !important;
 }
 
 label {
-  font-weight: bold;
+  font-weight: bold !important;
 }
 
 .form-btn {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0 20px 0;
+  display: flex !important;
+  justify-content: center !important;
+  margin: 20px 0 20px 0 !important;
 }
 
 /* RECIPE FORM */
 .note {
   color: #f8f9fa !important;
-  font-size: 78%;
-  margin-left: 20px;
+  font-size: 78% !important;
+  margin-left: 20px!important;
 }
 
 .yes-option {
-  margin-left: 10px;
-}
-
-/* EAT OUT FORM */
-.hide-div-on-eat-out-form {
-  display: block;
-}
-
-.show-div-on-eat-out-form {
-  display: block;
+  margin-left: 10px !important;
 }
