--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ body {
 }
 
 a {
-  color: inherit !important;
+  color: inherit;
   text-decoration: none !important;
 }
 
@@ -77,6 +77,7 @@ h3 {
   display: flex !important;
   flex-flow: row wrap !important;
   justify-content: center !important;
+  margin-bottom: 20px !important;
 }
 
 .individual-cards {
