--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,6 +127,8 @@ h3 {
   display: flex !important;
   justify-content: center !important;
   text-decoration: underline !important;
+  color: #a44a3f !important;
+  margin-top: 40px !important;
 }
 
 /* EAT OUT CARDS */
