--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,9 @@ h3 {
   text-align: center !important;
 }
 
+.edit-btn {
+  color: #fff;
+}
 .welcome-header {
   display: flex !important;
   justify-content: center !important;
